k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-deployment
  template:
    metadata:
      labels:
        app: app-deployment
    spec:
      containers:
        - name: backend
          image: dmitriy5015/final-appdpon:v7.2
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
